# ideavault

./: .gitignore  DEPLOYMENT.md  DEVELOPMENT.md  PUSH_TO_GITHUB.md  README.md  RENDER_SETUP.md  SETUP_GUIDE.md  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json
backend/prisma/: NEON_TROUBLESHOOTING.md  schema.prisma
backend/prisma/migrations/20260219145231_init/: migration.sql
backend/src/: index.ts
backend/src/middleware/: auth.ts
backend/src/routes/: auth.ts  health.ts  ideas.ts  messages.ts
backend/src/services/: algorand.ts  ipfs.ts
contracts/: ALTERNATIVES.md  DEPLOY.md  convert_key.py  deploy.py  generate_wallet.py  pyproject.toml
contracts/smart_contracts/idea_registry/: contract.py
contracts/smart_contracts/idea_registry/artifacts/: IdeaRegistry.approval.puya.map  IdeaRegistry.approval.teal  IdeaRegistry.arc32.json  IdeaRegistry.arc56.json
contracts/tests/: test_idea_registry.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/browse/: page.tsx
frontend/app/founder/dashboard/: page.tsx
frontend/app/founder/register-idea/: page.tsx
frontend/app/idea/[id]/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/src/components/: BlockchainCertificate.tsx  WalletConnectButton.tsx
frontend/src/services/: api.ts
