[tool.poetry]
name = "ideavault-contracts"
version = "0.1.0"
description = "IdeaVault Smart Contracts — Algorand Python (AlgoKit)"

[tool.poetry.dependencies]
python = "^3.12"
algokit-utils = ">=4.0.1,<5.0.0"
algorand-python = ">=2.0.0,<3.0.0"
pytest = ">=8.1.1"
pytest-asyncio = ">=0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
